--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
-<!DOCTYPE html>
-
+<html lang="en">
 <!--
 
-Simple website written with HTML/CSS by Robin Luo (2017)
+Simple responsive website written with HTML/CSS by Robin Luo (2017)
 
 inline CSS for easy accessibility with given user
 
 -->
-<html lang="en">
 <head>
 <title>EHS Poetry Club</title>
 <link rel="shortcut icon" href="https://raw.githubusercontent.com/ehspoetryclub/ehspoetryclub.github.io/master/favicon.ico" type="image/x-icon" />
@@ -157,5 +155,4 @@ footer svg {
 </div>
 </div>
 </body>
-
 </html>
