--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@ footer svg {
 
 <body>
 <div id="container">
+	
+<!-- Header -->
 <header>
 <nav>
 <a href="/">Home</a>
@@ -108,16 +110,17 @@ footer svg {
 <div id="title">Poetry Club</div>
 </header>
 
+<!-- Main -->
 <main>
 <section id="about">
 <h1>What's it about?</h1>
 <p>
 	Poetry Club welcomes all people. We strive to not only help each other improve on analyzing, comprehending, and interpreting poetry, but we also encourage self-expression by providing a comfortable and friendly environment. By reading, writing, sharing, and exploring poetry, this club enhances everyday English skills and allows for creative ways to explain all aspects of life.
- <!-- to edit description, edit inside this --> 
+ <!-- To edit description, edit inside this --> 
 </p>
 <p>
 	We meet every Thursdays in room A218!
- <!-- to edit description, edit inside this -->
+ <!-- To edit description, edit inside this -->
 </p>
 </section>
 <section id="events">
