--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@ a:hover {
 }
 
 #container {
-	transform:translate(50% 50%);
 	text-align:center;
 	width:680px;
 	margin:0px auto;
@@ -73,7 +72,7 @@ nav {
 	text-transform:uppercase;
 }
 
-nav a, nav span {
+nav a {
 	margin:1em;
 }
 
@@ -123,9 +122,11 @@ footer svg {
  <!-- To edit description, edit inside this -->
 </p>
 </section>
+
 <section id="events">
 <h1>What's going on?</h1>
-<a class="twitter-timeline" data-width="100%" data-height="750" href="https://twitter.com/ehspoetryclub">Tweets by ehspoetryclub</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+<a class="twitter-timeline" data-width="100%" data-height="750" href="https://twitter.com/ehspoetryclub">Tweets by ehspoetryclub</a> 
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 </section>
 
 <section id="links">
@@ -155,6 +156,6 @@ footer svg {
  <p>(2017)</p>
 </footer>
 </div>
-</div>
 </body>
+
 </html>
