--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-<html lang="en">
-<!--
+<!DOCTYPE html>
 
-Simple responsive website written with HTML/CSS by Robin Luo (2017)
+<!---
+
+Simple responsive website written by Robin Luo (2017)
 
 inline CSS for easy accessibility with given user
 
--->
+--->
 <head>
 <title>EHS Poetry Club</title>
 <link rel="shortcut icon" href="https://raw.githubusercontent.com/ehspoetryclub/ehspoetryclub.github.io/master/favicon.ico" type="image/x-icon" />
@@ -99,7 +100,6 @@ footer svg {
 
 <body>
 <div id="container">
-	
 <!-- Header -->
 <header>
 <nav>
@@ -115,18 +115,18 @@ footer svg {
 <h1>What's it about?</h1>
 <p>
 	Poetry Club welcomes all people. We strive to not only help each other improve on analyzing, comprehending, and interpreting poetry, but we also encourage self-expression by providing a comfortable and friendly environment. By reading, writing, sharing, and exploring poetry, this club enhances everyday English skills and allows for creative ways to explain all aspects of life.
- <!-- To edit description, edit inside this --> 
+	
+	<!-- Edit within <p> </p> to change the description -->
 </p>
 <p>
 	We meet every Thursdays in room A218!
- <!-- To edit description, edit inside this -->
+	<!-- Edit within <p> </p> to change the description -->
 </p>
 </section>
 
 <section id="events">
 <h1>What's going on?</h1>
-<a class="twitter-timeline" data-width="100%" data-height="750" href="https://twitter.com/ehspoetryclub">Tweets by ehspoetryclub</a> 
-<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+<a class="twitter-timeline" data-width="100%" data-height="750" href="https://twitter.com/ehspoetryclub">Tweets by ehspoetryclub</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 </section>
 
 <section id="links">
@@ -140,20 +140,20 @@ footer svg {
 
 <!-- Footer -->
 <footer>
- <a href="https://twitter.com/ehspoetryclub/">
- <svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" enable-background="new 0 0 32 32" viewBox="0 0 32 32" x="0px" y="0px" width="35px" height="35px" xmlns:xml="http://www.w3.org/XML/1998/namespace" xml:space="preserve" version="1.1">
- <path fill="#444444" d="M 32 6.1 c -1.2 0.5 -2.4 0.9 -3.8 1 c 1.4 -0.8 2.4 -2.1 2.9 -3.6 c -1.3 0.8 -2.7 1.3 -4.2 1.6 C 25.7 3.8 24 3 22.2 3 c -3.6 0 -6.6 2.9 -6.6 6.6 c 0 0.5 0.1 1 0.2 1.5 C 10.3 10.8 5.5 8.2 2.2 4.2 c -0.6 1 -0.9 2.1 -0.9 3.3 c 0 2.3 1.2 4.3 2.9 5.5 c -1.1 0 -2.1 -0.3 -3 -0.8 c 0 0 0 0.1 0 0.1 c 0 3.2 2.3 5.8 5.3 6.4 c -0.6 0.1 -1.1 0.2 -1.7 0.2 c -0.4 0 -0.8 0 -1.2 -0.1 c 0.8 2.6 3.3 4.5 6.1 4.6 c -2.2 1.8 -5.1 2.8 -8.2 2.8 c -0.5 0 -1.1 0 -1.6 -0.1 C 2.9 27.9 6.4 29 10.1 29 c 12.1 0 18.7 -10 18.7 -18.7 c 0 -0.3 0 -0.6 0 -0.8 C 30 8.5 31.1 7.4 32 6.1 Z" />
- </svg>
- </a>
- <a href="https://www.instagram.com/ehspoetry/">
- <svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" enable-background="new 0 0 32 32" viewBox="0 0 32 32" x="0px" y="0px" width="35px" height="35px" xmlns:xml="http://www.w3.org/XML/1998/namespace" xml:space="preserve" version="1.1">
- <path fill="#444444" d="M 28.2 0 H 3.8 C 1.7 0 0 1.7 0 3.8 v 24.4 C 0 30.3 1.7 32 3.8 32 h 24.4 c 2.1 0 3.8 -1.7 3.8 -3.8 V 3.8 C 32 1.7 30.3 0 28.2 0 Z M 24 4 h 3 c 0.6 0 1 0.4 1 1 v 3 c 0 0.6 -0.4 1 -1 1 h -3 c -0.6 0 -1 -0.4 -1 -1 V 5 C 23 4.4 23.4 4 24 4 Z M 16 9.9 c 3.4 0 6.2 2.7 6.2 6.1 c 0 3.4 -2.8 6.1 -6.2 6.1 c -3.4 0 -6.2 -2.7 -6.2 -6.1 C 9.9 12.6 12.6 9.9 16 9.9 Z M 28 29 H 4 c -0.6 0 -1 -0.4 -1 -1 V 13 h 4 c -0.5 0.8 -0.7 2.1 -0.7 3 c 0 5.4 4.4 9.7 9.7 9.7 c 5.4 0 9.7 -4.4 9.7 -9.7 c 0 -0.9 -0.1 -2.3 -0.8 -3 h 4 v 15 C 29 28.6 28.6 29 28 29 Z" />
- </svg>
- </a>
- <p>ehspoetry@gmail.com</p>
+<a href="https://twitter.com/ehspoetryclub/">
+<svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" enable-background="new 0 0 32 32" viewBox="0 0 32 32" x="0px" y="0px" width="35px" height="35px" xmlns:xml="http://www.w3.org/XML/1998/namespace" xml:space="preserve" version="1.1">
+<path fill="#444444" d="M 32 6.1 c -1.2 0.5 -2.4 0.9 -3.8 1 c 1.4 -0.8 2.4 -2.1 2.9 -3.6 c -1.3 0.8 -2.7 1.3 -4.2 1.6 C 25.7 3.8 24 3 22.2 3 c -3.6 0 -6.6 2.9 -6.6 6.6 c 0 0.5 0.1 1 0.2 1.5 C 10.3 10.8 5.5 8.2 2.2 4.2 c -0.6 1 -0.9 2.1 -0.9 3.3 c 0 2.3 1.2 4.3 2.9 5.5 c -1.1 0 -2.1 -0.3 -3 -0.8 c 0 0 0 0.1 0 0.1 c 0 3.2 2.3 5.8 5.3 6.4 c -0.6 0.1 -1.1 0.2 -1.7 0.2 c -0.4 0 -0.8 0 -1.2 -0.1 c 0.8 2.6 3.3 4.5 6.1 4.6 c -2.2 1.8 -5.1 2.8 -8.2 2.8 c -0.5 0 -1.1 0 -1.6 -0.1 C 2.9 27.9 6.4 29 10.1 29 c 12.1 0 18.7 -10 18.7 -18.7 c 0 -0.3 0 -0.6 0 -0.8 C 30 8.5 31.1 7.4 32 6.1 Z" />
+</svg>
+</a>
+<a href="https://www.instagram.com/ehspoetry/">
+<svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" enable-background="new 0 0 32 32" viewBox="0 0 32 32" x="0px" y="0px" width="35px" height="35px" xmlns:xml="http://www.w3.org/XML/1998/namespace" xml:space="preserve" version="1.1">
+<path fill="#444444" d="M 28.2 0 H 3.8 C 1.7 0 0 1.7 0 3.8 v 24.4 C 0 30.3 1.7 32 3.8 32 h 24.4 c 2.1 0 3.8 -1.7 3.8 -3.8 V 3.8 C 32 1.7 30.3 0 28.2 0 Z M 24 4 h 3 c 0.6 0 1 0.4 1 1 v 3 c 0 0.6 -0.4 1 -1 1 h -3 c -0.6 0 -1 -0.4 -1 -1 V 5 C 23 4.4 23.4 4 24 4 Z M 16 9.9 c 3.4 0 6.2 2.7 6.2 6.1 c 0 3.4 -2.8 6.1 -6.2 6.1 c -3.4 0 -6.2 -2.7 -6.2 -6.1 C 9.9 12.6 12.6 9.9 16 9.9 Z M 28 29 H 4 c -0.6 0 -1 -0.4 -1 -1 V 13 h 4 c -0.5 0.8 -0.7 2.1 -0.7 3 c 0 5.4 4.4 9.7 9.7 9.7 c 5.4 0 9.7 -4.4 9.7 -9.7 c 0 -0.9 -0.1 -2.3 -0.8 -3 h 4 v 15 C 29 28.6 28.6 29 28 29 Z" />
+</svg>
+</a>
+<p>ehspoetry@gmail.com</p>
 
- <p>Website written by Robin Luo</p>
- <p>(2017)</p>
+<p>Website written by Robin Luo</p>
+<p>(2017)</p>
 </footer>
 </div>
 </body>
