--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@ footer {
 footer svg {
 	margin:10px;
 }
+	
+#c {
+	font-size:0.8em;
+}
 
 </style>
 
@@ -152,8 +156,7 @@ footer svg {
 </a>
 <p>ehspoetry@gmail.com</p>
 
-<p>Website written by Robin Luo</p>
-<p>(2017)</p>
+<span id="c">Website written by Robin Luo (2017)</span>
 </footer>
 </div>
 </body>
