--- a/index.html
+++ b/index.html
@@ -107,8 +107,7 @@ footer svg {
 <!-- Header -->
 <header>
 <nav>
-<a href="/">Home</a>
-<a href="http://www.ecusd7.org/ehs/">EHS</a>
+<a href="http://www.ecusd7.org/ehs/">Back to EHS</a>
 </nav>
 <div id="title">Poetry Club</div>
 </header>
