--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 Simple responsive website written by Robin Luo (2017)
 
-inline CSS for easy accessibility with given user
+internal CSS for easy accessibility with given user
 
 -->
 <head>
@@ -47,7 +47,7 @@ a:hover {
 	width:680px;
 	margin:0px auto;
 	height:100%;
-	padding:0% 5%;
+	padding:0% 8%;
 	background:#ffffff;
 }
 
@@ -69,7 +69,6 @@ h1, h2, h3, h4, h5 {
 }
 
 nav {
-	padding-top:4%;
 	text-transform:uppercase;
 }
 
