--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ footer svg {
 <nav>
 <a href="http://www.ecusd7.org/ehs/">Back to EHS</a>
 </nav>
-<div id="title">Poetry Club</div>
+<div id="title">EHS Poetry Club</div>
 </header>
 
 <!-- Main -->
