--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@ internal CSS for easy accessibility with given user
 		margin:auto 5%!important;
 		width:80%!important;
 	}
+	
+	#title {
+		font-size:25px!important;
+	}
 }
 
 body {
