--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@ a:hover {
 	padding:2.5% 5%;
 	background:#ffffff;
 }
+	
+#title, h1 {	
+	letter-spacing:0.2em;
+}
 
 #title {
 	font-size:30px;
@@ -61,12 +65,9 @@ a:hover {
 	text-transform:uppercase;
 	font-weight:bold;
 	padding:13% 0%;
-	letter-spacing:0.2em;
 }
 
-h1, h2, h3, h4, h5 {
-	font-weight:none!important;
-	letter-spacing:0.1em;
+h1 {
 	color:#94A4C6;
 	line-height:130%;
 	margin-bottom:1em;
