--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@ a:hover {
 	font-weight:bold;
 	padding:13% 0%;
 }
+	
+#title a, #title a:hover {
+	color:#000000;
+}
 
 h1 {
 	color:#94A4C6;
@@ -113,7 +117,7 @@ footer svg {
 <nav>
 <a href="http://www.ecusd7.org/ehs/">Back to EHS</a>
 </nav>
-<div id="title">EHS Poetry Club</div>
+<div id="title"><a href="/">EHS Poetry Club</a></div>
 </header>
 
 <!-- Main -->
