--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 Simple responsive website written by Robin Luo (2017)
 
-internal CSS for easy accessibility with given user
+Internal CSS for easy accessibility with given user
 
 -->
 <head>
@@ -101,7 +101,7 @@ footer svg {
 	margin:10px;
 }
 	
-#c {
+.c {
 	font-size:0.8em;
 }
 
@@ -157,13 +157,22 @@ footer svg {
 </svg>
 </a>
 <a href="https://www.instagram.com/ehspoetry/">
-<svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" enable-background="new 0 0 32 32" viewBox="0 0 32 32" x="0px" y="0px" width="35px" height="35px" xmlns:xml="http://www.w3.org/XML/1998/namespace" xml:space="preserve" version="1.1">
-<path fill="#444444" d="M 28.2 0 H 3.8 C 1.7 0 0 1.7 0 3.8 v 24.4 C 0 30.3 1.7 32 3.8 32 h 24.4 c 2.1 0 3.8 -1.7 3.8 -3.8 V 3.8 C 32 1.7 30.3 0 28.2 0 Z M 24 4 h 3 c 0.6 0 1 0.4 1 1 v 3 c 0 0.6 -0.4 1 -1 1 h -3 c -0.6 0 -1 -0.4 -1 -1 V 5 C 23 4.4 23.4 4 24 4 Z M 16 9.9 c 3.4 0 6.2 2.7 6.2 6.1 c 0 3.4 -2.8 6.1 -6.2 6.1 c -3.4 0 -6.2 -2.7 -6.2 -6.1 C 9.9 12.6 12.6 9.9 16 9.9 Z M 28 29 H 4 c -0.6 0 -1 -0.4 -1 -1 V 13 h 4 c -0.5 0.8 -0.7 2.1 -0.7 3 c 0 5.4 4.4 9.7 9.7 9.7 c 5.4 0 9.7 -4.4 9.7 -9.7 c 0 -0.9 -0.1 -2.3 -0.8 -3 h 4 v 15 C 29 28.6 28.6 29 28 29 Z" />
+<svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 612 612" style="enable-background:new 0 0 612 612;" xml:space="preserve">
+<path style="fill:#010002;" d="M612,116.258c-22.525,9.981-46.694,16.75-72.088,19.772c25.929-15.527,45.777-40.155,55.184-69.411
+c-24.322,14.379-51.169,24.82-79.775,30.48c-22.907-24.437-55.49-39.658-91.63-39.658c-69.334,0-125.551,56.217-125.551,125.513
+c0,9.828,1.109,19.427,3.251,28.606C197.065,206.32,104.556,156.337,42.641,80.386c-10.823,18.51-16.98,40.078-16.98,63.101
+c0,43.559,22.181,81.993,55.835,104.479c-20.575-0.688-39.926-6.348-56.867-15.756v1.568c0,60.806,43.291,111.554,100.693,123.104
+c-10.517,2.83-21.607,4.398-33.08,4.398c-8.107,0-15.947-0.803-23.634-2.333c15.985,49.907,62.336,86.199,117.253,87.194
+c-42.947,33.654-97.099,53.655-155.916,53.655c-10.134,0-20.116-0.612-29.944-1.721c55.567,35.681,121.536,56.485,192.438,56.485
+c230.948,0,357.188-191.291,357.188-357.188l-0.421-16.253C573.872,163.526,595.211,141.422,612,116.258z"/>
 </svg>
+
 </a>
 <p>ehspoetry@gmail.com</p>
 
-<span id="c">Website written by Robin Luo (2017)</span>
+<span class="c">Website written by Robin Luo (2017)</span>
+<span class="c"><div>Icons made by <a href="https://www.flaticon.com/authors/elegant-themes" title="Elegant Themes">Elegant Themes</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div></span>
 </footer>
 </div>
 </body>
