--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@ footer {
 
 footer svg {
 	margin:10px;
+	width:35px!important;
+	height:auto!important;
 }
 	
 .c {
@@ -152,11 +154,6 @@ footer svg {
 <!-- Footer -->
 <footer>
 <a href="https://twitter.com/ehspoetryclub/">
-<svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" enable-background="new 0 0 32 32" viewBox="0 0 32 32" x="0px" y="0px" width="35px" height="35px" xmlns:xml="http://www.w3.org/XML/1998/namespace" xml:space="preserve" version="1.1">
-<path fill="#444444" d="M 32 6.1 c -1.2 0.5 -2.4 0.9 -3.8 1 c 1.4 -0.8 2.4 -2.1 2.9 -3.6 c -1.3 0.8 -2.7 1.3 -4.2 1.6 C 25.7 3.8 24 3 22.2 3 c -3.6 0 -6.6 2.9 -6.6 6.6 c 0 0.5 0.1 1 0.2 1.5 C 10.3 10.8 5.5 8.2 2.2 4.2 c -0.6 1 -0.9 2.1 -0.9 3.3 c 0 2.3 1.2 4.3 2.9 5.5 c -1.1 0 -2.1 -0.3 -3 -0.8 c 0 0 0 0.1 0 0.1 c 0 3.2 2.3 5.8 5.3 6.4 c -0.6 0.1 -1.1 0.2 -1.7 0.2 c -0.4 0 -0.8 0 -1.2 -0.1 c 0.8 2.6 3.3 4.5 6.1 4.6 c -2.2 1.8 -5.1 2.8 -8.2 2.8 c -0.5 0 -1.1 0 -1.6 -0.1 C 2.9 27.9 6.4 29 10.1 29 c 12.1 0 18.7 -10 18.7 -18.7 c 0 -0.3 0 -0.6 0 -0.8 C 30 8.5 31.1 7.4 32 6.1 Z" />
-</svg>
-</a>
-<a href="https://www.instagram.com/ehspoetry/">
 <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 612 612" style="enable-background:new 0 0 612 612;" xml:space="preserve">
 <path style="fill:#010002;" d="M612,116.258c-22.525,9.981-46.694,16.75-72.088,19.772c25.929-15.527,45.777-40.155,55.184-69.411
@@ -166,6 +163,17 @@ c0,43.559,22.181,81.993,55.835,104.479c-20.575-0.688-39.926-6.348-56.867-15.756v
 c-10.517,2.83-21.607,4.398-33.08,4.398c-8.107,0-15.947-0.803-23.634-2.333c15.985,49.907,62.336,86.199,117.253,87.194
 c-42.947,33.654-97.099,53.655-155.916,53.655c-10.134,0-20.116-0.612-29.944-1.721c55.567,35.681,121.536,56.485,192.438,56.485
 c230.948,0,357.188-191.291,357.188-357.188l-0.421-16.253C573.872,163.526,595.211,141.422,612,116.258z"/>
+</svg>
+</a>
+<a href="https://www.instagram.com/ehspoetry/">
+<svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 486.392 486.392" style="enable-background:new 0 0 486.392 486.392;" xml:space="preserve">
+<path style="fill:#010002;" d="M464.413,0H21.948C9.849,0,0,9.819,0,21.918v442.555c0,12.069,9.849,21.918,21.948,21.918h442.464
+c12.129,0,21.979-9.849,21.979-21.918V21.918C486.392,9.819,476.542,0,464.413,0z M243.196,158.32
+c46.876,0,84.875,37.999,84.875,84.875s-37.999,84.875-84.875,84.875s-84.875-37.999-84.875-84.875S196.32,158.32,243.196,158.32z
+ M425.593,425.593H60.799V212.796h40.036c-2.098,9.819-3.314,19.972-3.314,30.399c0,80.346,65.359,145.674,145.674,145.674
+c80.346,0,145.674-65.328,145.674-145.674c0-10.427-1.216-20.58-3.283-30.399h40.006V425.593z M425.593,151.997h-91.198V60.799
+h91.198V151.997z"/>
 </svg>
 
 </a>
