--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <!--
 
-Simple responsive website written by Robin Luo (2017)
-
+Simple responsive website written by Robin 
 Internal CSS for easy accessibility with given user
+Icons by Elegant Themes
 
 -->
 <head>
@@ -15,7 +15,7 @@ Internal CSS for easy accessibility with given user
 
 <style type="text/css">
 
-@media only screen and (max-width:768px) {
+@media only screen and (max-width:765px) {
 	#container {
 		margin:auto 5%!important;
 		width:80%!important;
@@ -31,7 +31,7 @@ body {
 	color:#000000;
 	margin:0;
 	padding:0;
-	font-size:14px;
+	font-size:15px;
 	font-family:work sans, sans-serif;
 	line-height:150%;
 	letter-spacing:0.05em;
@@ -178,9 +178,6 @@ h91.198V151.997z"/>
 
 </a>
 <p>ehspoetry@gmail.com</p>
-
-<span class="c">Website written by Robin Luo (2017)</span>
-<span class="c"><div>Icons made by <a href="https://www.flaticon.com/authors/elegant-themes" title="Elegant Themes">Elegant Themes</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div></span>
 </footer>
 </div>
 </body>
